tests/traci/variable_subscription/errors/UnknownVariable/testclient.prog
simstep2 2
subscribevariable 212 0 0 1000 1 255
simstep2 0

